--- a/Components/MixerCard.razor
+++ b/Components/MixerCard.razor
@@ -6,8 +6,8 @@
 
     <div class="transition-opacity duration-300 flex gap-10 items-center w-full">
         <div class="grow">
-            <div class="font-semibold text-white">IP: @MixerInfo.IpAddress</div>
-            <div class="text-sm text-gray-200">@MixerInfo.MixerType</div>
+            <div class="font-medium text-white">@MixerInfo.IpAddress</div>
+            <div class="text-sm text-gray-200 uppercase">@MixerInfo.MixerType</div>
         </div>
         <div class="items-center flex gap-1">
             <i class="text-2xl fas fa-circle-play"></i>
