Renamed UDPservice to mixerIO

--- a/Components/Pages/OscMonitor.razor
+++ b/Components/Pages/OscMonitor.razor
@@ -1,7 +1,7 @@
 ﻿@attribute [Route(Routes.OscMonitor)]
 @using Eggbox.Services
 @using Eggbox.Models
-@inject UDPService IO
+@inject MixerIO IO
 @inject TrafficLogger Traffic
 
 <section class="p-6 select-none">
