Renamed layout page to in/out

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -40,12 +40,12 @@
     {
         <nav class="bg-white border-t border-gray-200 shadow-lg flex justify-around items-center text-gray-500">
 
-            <NavLink href="@Routes.Layout"
+            <NavLink href="@Routes.InOut"
                      class="flex flex-col items-center gap-1 px-4 py-2"
                      ActiveClass="text-primary"
                      Match="NavLinkMatch.All">
                 <i class="fas fa-plug text-xl"></i>
-                <span class="text-xs">Layout</span>
+                <span class="text-xs">In/Out</span>
             </NavLink>
 
             <NavLink href="@Routes.Dashboard"
