--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -86,7 +86,7 @@
 
             _state = ConnectState.Connected;
 
-            NavManager.NavigateTo(Routes.Layout);
+            NavManager.NavigateTo(Routes.InOut);
         }
         catch (Exception ex)
         {
