--- a/Components/Pages/InOut.razor
+++ b/Components/Pages/InOut.razor
@@ -1,4 +1,4 @@
-﻿@attribute [Route(Routes.Layout)]
+﻿@attribute [Route(Routes.InOut)]
 @using Eggbox.Models
 @using Eggbox.Services
 @using Color = Eggbox.Models.Color
