--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -6,7 +6,7 @@
 </Router>
 
 @code {
-    public const string Layout = "/lauout";
+    public const string InOut = "/in-out";
     public const string Dashboard = "/dashboard";
     public const string OscMonitor = "/osc-monitor";
     public const string Home = "/";
